[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "generative_molecular_property_prediction"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Jailson Evora" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["generative_molecular_property_prediction"]
include = ["pyproject.toml", "generative_molecular_property_prediction/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["generative_molecular_property_prediction"]
force-sort-within-sections = true

